@@ -15,6 +15,12 @@
 <h1>Changelog</h1>
 
 <dl>
+<dt>2013-10-31</dt>
+<dd>Added optional order parameter to SetExcitationPlanewave.</dd>
+<dt>2013-10-16</dt>
+<dd>Layer integrals now also return imaginary parts.</dd>
+<dt>2013-08-15</dt>
+<dd>Fixed bug with SetLatticeTruncation not having an effect.</dd>
 <dt>2013-05-29</dt>
 <dd><pre><code>Added additional options to Lanczos smoothing. Upgraded support to Lua 5.2 (dropped support for 5.1).
 </code></pre></dd>
